auth: docs update all point
